<resources>
    <string name="app_name">VATE</string>
    <string name="search_on_current_location">현재 위치에서 검색</string>
    <string name="category_filter">필터</string>
    <string name="category_selection_filter">유형 선택</string>
    <string name="home_environment">주거환경</string>
    <string name="living_support">생활지원</string>
    <string name="counseling">상담</string>
    <string name="education">교육</string>
    <string name="medical">보건의료</string>
    <string name="rural">농어촌 봉사</string>
    <string name="culture">문화봉사</string>
    <string name="environment">환경보호</string>
    <string name="admin_assist">행정보조</string>
    <string name="safety">안전예방</string>
    <string name="for_public">공익</string>
    <string name="disaster">재해, 재난</string>
    <string name="global">해외봉사</string>
    <string name="mentor">멘토링</string>
    <string name="etc">기타</string>
    <string name="selection_complete">선택 완료</string>
    <string name="content">내용</string>
    <string name="time">시간</string>
    <string name="location">장소</string>
    <string name="apply">신청하기</string>
    <string name="accept">동의하기</string>
    <string name="application_checked">확인 완료</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_application_history">내 봉사 현황</string>
    <string name="applied_vol">신청 봉사</string>
    <string name="past_vol">지난 봉사</string>
    <string name="cancel">취소</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="application_cancel">신청취소</string>
</resources>