<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/white"
    tools:context=".activity.ActivityHistoryFragment">

    <TextView
        android:id="@+id/appHistoryLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/my_application_history"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/optionTabMenu"
        app:layout_constraintTop_toBottomOf="@id/appHistoryLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/optionTabApplied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applied_vol"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/optionTabPast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_vol"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/appHistoryRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionTabMenu"
        tools:itemCount="7"
        tools:listitem="@layout/app_history_item" />

</androidx.constraintlayout.widget.ConstraintLayout>