<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="backwardButton"
        android:padding="15dp"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/organizationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backwardButton"
        tools:text="ABC 어린이집" />

    <TextView
        android:id="@+id/activityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/organizationName"
        app:layout_constraintTop_toBottomOf="@+id/organizationName"
        tools:text="어린이 수학 교육 자원봉사" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_corner_text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@id/activityName"
        app:layout_constraintTop_toBottomOf="@id/activityName"
        tools:text="교육" />

    <TextView
        android:id="@+id/activity_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/round_corner_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/category"
        app:layout_constraintStart_toEndOf="@id/category"
        app:layout_constraintTop_toTopOf="@id/category"
        tools:text="온라인" />

    <TextView
        android:id="@+id/contentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/content"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/category"
        app:layout_constraintTop_toBottomOf="@id/activity_method" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@id/activityName"
        app:layout_constraintStart_toStartOf="@id/activityName"
        app:layout_constraintTop_toBottomOf="@id/contentLabel"
        tools:text="아이들에게 수학을 가르칩니다." />

    <TextView
        android:id="@+id/activityTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/category"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <TextView
        android:id="@+id/activityTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@id/activityName"
        app:layout_constraintStart_toStartOf="@id/activityName"
        app:layout_constraintTop_toBottomOf="@id/activityTimeLabel"
        tools:text="2022.08.22(월) 오전 9시 - 오후 6시" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/category"
        app:layout_constraintTop_toBottomOf="@id/activityTime" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="@id/activityName"
        app:layout_constraintStart_toStartOf="@id/activityName"
        app:layout_constraintTop_toBottomOf="@id/locationLabel"
        tools:text="경기도 안성시 당왕동 553-13 3F" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locationMap"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/locationText"
        app:layout_constraintTop_toBottomOf="@id/locationText"
        tools:background="@color/gray" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/applyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:elevation="1dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_button_orange"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>